force-app/main/default/objects/Account/fields/Billing_Theatre__c.field-meta.xml
<CustomField>
    <fullName>Billing_Theatre__c</fullName>
    <label>Billing Theatre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>