force-app/main/default/objects/Account/fields/Booked_Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Booked_Opportunity_Count__c</fullName>
    <description>This field counts the number of Booked opportunities associated with the Account.</description>
    <inlineHelpText>This field counts the number of Booked opportunities associated with the Account.</inlineHelpText>
    <label>Booked Opportunity Count</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed/Booked</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>