force-app/main/default/objects/Account/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <inlineHelpText>This product is used to capture check images at the branch.</inlineHelpText>
    <label>Branch</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR: Passport</fullName>
            </value>
            <value>
                <fullName>NCR: Transaction Gateway</fullName>
            </value>
            <value>
                <fullName>NCR: INTRIA Passport</fullName>
            </value>
            <value>
                <fullName>NCR: INTRIA Transaction Gateway</fullName>
            </value>
            <value>
                <fullName>NCR: C1 Passport</fullName>
            </value>
            <value>
                <fullName>Alogent</fullName>
            </value>
            <value>
                <fullName>JackHenry</fullName>
            </value>
            <value>
                <fullName>Argo</fullName>
            </value>
            <value>
                <fullName>FIS</fullName>
            </value>
            <value>
                <fullName>Fiserv</fullName>
            </value>
            <value>
                <fullName>VSOFT</fullName>
            </value>
            <value>
                <fullName>Genpact</fullName>
            </value>
            <value>
                <fullName>DXC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>No Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>