force-app/main/default/objects/Account/fields/Business_Bill_Payment_CED__c.field-meta.xml
<CustomField>
    <fullName>Business_Bill_Payment_CED__c</fullName>
    <inlineHelpText>test</inlineHelpText>
    <label>Business Bill Payment CED</label>
    <type>Date</type>
</CustomField>