force-app/main/default/objects/Account/fields/CAP_Watch__c.field-meta.xml
<CustomField>
    <fullName>CAP_Watch__c</fullName>
    <label>CAP/Watch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAP</fullName>
            </value>
            <value>
                <fullName>WATCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>