force-app/main/default/objects/Account/fields/Cash_and_transaction_balancing__c.field-meta.xml
<CustomField>
    <fullName>Cash_and_transaction_balancing__c</fullName>
    <inlineHelpText>This solution reconciles ATMs with other data sources such as EJ, switch data, general ledgers, etc.</inlineHelpText>
    <label>Cash and transaction balancing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR: Reconciliation</fullName>
            </value>
            <value>
                <fullName>Network/Switch Provider</fullName>
            </value>
            <value>
                <fullName>Fiserv: Frontier</fullName>
            </value>
            <value>
                <fullName>FIS: Reconciliation Business</fullName>
            </value>
            <value>
                <fullName>FIS: IntelliMatch</fullName>
            </value>
            <value>
                <fullName>First Data: OmniPay</fullName>
            </value>
            <value>
                <fullName>Diebold</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>No Solution</fullName>
            </value>
            <value>
                <fullName>Fiserv iCom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>