force-app/main/default/objects/Account/fields/Cash_Management__c.field-meta.xml
<CustomField>
    <fullName>Cash_Management__c</fullName>
    <label>Cash Management</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR: OptiCash</fullName>
                <color>#FFFFFF</color>
                <label>NCR: OptiCash</label>
            </value>
            <value>
                <fullName>Fiserv iCom</fullName>
                <color>#FFFFFF</color>
                <label>Fiserv iCom</label>
            </value>
            <value>
                <fullName>PlanFocus</fullName>
                <color>#FFFFFF</color>
                <label>PlanFocus</label>
            </value>
            <value>
                <fullName>Excel</fullName>
                <color>#FFFFFF</color>
                <label>Excel</label>
            </value>
            <value>
                <fullName>Morphis</fullName>
                <color>#FFFFFF</color>
                <label>Morphis</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#FFFFFF</color>
                <label>Other</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <color>#FFFFFF</color>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <color>#FFFFFF</color>
                <label>N/A</label>
            </value>
            <value>
                <fullName>In-house</fullName>
                <color>#FFFFFF</color>
                <label>In-house</label>
            </value>
            <value>
                <fullName>No Solution</fullName>
                <color>#FFFFFF</color>
                <label>No Solution</label>
            </value>
            <value>
                <fullName>C4U</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>SAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>