force-app/main/default/objects/Account/fields/CATM_Region__c.field-meta.xml
<CustomField>
    <fullName>CATM_Region__c</fullName>
    <description>CATM</description>
    <label>Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>