force-app/main/default/objects/Account/fields/CC_Processor__c.field-meta.xml
<CustomField>
    <fullName>CC_Processor__c</fullName>
    <label>Credit Card Processor/Host</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FIS Base2000</fullName>
            </value>
            <value>
                <fullName>Fiserv</fullName>
            </value>
            <value>
                <fullName>FIS TBS</fullName>
            </value>
            <value>
                <fullName>PSCU</fullName>
            </value>
            <value>
                <fullName>VISA</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>No solution</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>COOP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>