force-app/main/default/objects/Account/fields/CDM_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>CDM_Account_Manager__c</fullName>
    <label>CDM Account Manager</label>
    <length>60</length>
    <type>Text</type>
</CustomField>