force-app/main/default/objects/Account/fields/CDM_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>CDM_Account_Status__c</fullName>
    <label>NCR Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>