force-app/main/default/objects/Account/fields/CDM_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>CDM_Account_Type__c</fullName>
    <description>This field has been created under CDM project and values for this field will be coming from CDM via SOUP.</description>
    <label>Account Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>