force-app/main/default/objects/Account/fields/CDM_Customer_Local_Language__c.field-meta.xml
<CustomField>
    <fullName>CDM_Customer_Local_Language__c</fullName>
    <label>Customer Local Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>