force-app/main/default/objects/Account/fields/cdm_Enterprise_Parent_Status__c.field-meta.xml
<CustomField>
    <fullName>cdm_Enterprise_Parent_Status__c</fullName>
    <label>Enterprise Parent Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>