force-app/main/default/objects/Account/fields/CDM_IsMerged__c.field-meta.xml
<CustomField>
    <fullName>CDM_IsMerged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMerged</label>
    <type>Checkbox</type>
</CustomField>