force-app/main/default/objects/Account/fields/cdm_NationalVatTaxID__c.field-meta.xml
<CustomField>
    <fullName>cdm_NationalVatTaxID__c</fullName>
    <description>This field is only applicable for site record types and represent Tax ID in a particular country.</description>
    <label>National ID/Vat/Tax ID (CNPJ Number)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>