force-app/main/default/objects/Account/fields/CDM_SMB_Flag__c.field-meta.xml
<CustomField>
    <fullName>CDM_SMB_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Note: This field was requested to be removed from the layout by Jane green</description>
    <label>SMB Flag</label>
    <type>Checkbox</type>
</CustomField>