force-app/main/default/objects/Account/fields/cdm_Solution_Set_ID__c.field-meta.xml
<CustomField>
    <fullName>cdm_Solution_Set_ID__c</fullName>
    <description>This field is only available for Site Record Type and represents HW Role.</description>
    <label>Solution Set ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>