force-app/main/default/objects/Account/fields/CDM_Source_SOC__c.field-meta.xml
<CustomField>
    <fullName>CDM_Source_SOC__c</fullName>
    <label>Source SOC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>