force-app/main/default/objects/Account/fields/cdm_Store_Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>cdm_Store_Branch_Number__c</fullName>
    <description>This field is only applicable for site record types and represent store number of particular site.</description>
    <label>Store/Branch Number</label>
    <length>120</length>
    <type>Text</type>
</CustomField>