force-app/main/default/objects/Account/fields/CDM_Sub_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>CDM_Sub_Account_Type__c</fullName>
    <inlineHelpText>End Customer Specified Provider (SP): End customer selected SP to purchase/ install or provide services on their behalf. 
Independent Software Vendor (ISV):  Specializes in developing and selling software solutions.
Solution Provider: Contracted to sell &amp; service NCR solutions in defined territory.
Strategic Alliance Partner: Partner and NCR undertake mutually beneficial program.
System Integrator (SI): Markets commercially integrated solutions.</inlineHelpText>
    <label>Sub Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>