force-app/main/default/objects/Account/fields/Channel_Organization_Code__c.field-meta.xml
<CustomField>
    <fullName>Channel_Organization_Code__c</fullName>
    <label>Channel Organization Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>