force-app/main/default/objects/Account/fields/Chat_Video_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Chat_Video_Solutions__c</fullName>
    <label>Chat &amp; Video Solutions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Glia</fullName>
            </value>
            <value>
                <fullName>LivePerson</fullName>
            </value>
            <value>
                <fullName>Revation</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>