force-app/main/default/objects/Account/fields/Churn_Risk_Group__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Group__c</fullName>
    <description>This field is used to display &quot;High-Risk&quot; or &quot;Medium-Risk&quot; on accounts at risk of churning.</description>
    <label>Churn Risk Group</label>
    <type>TextArea</type>
</CustomField>