force-app/main/default/objects/Account/fields/CMC_Id__c.field-meta.xml
<CustomField>
    <fullName>CMC_Id__c</fullName>
    <externalId>true</externalId>
    <label>CMC Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>