force-app/main/default/objects/Account/fields/Consumer_Deposit_OAO__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Deposit_OAO__c</fullName>
    <label>Consumer Deposit (OAO)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR-D3</fullName>
            </value>
            <value>
                <fullName>Apiture</fullName>
            </value>
            <value>
                <fullName>Blend</fullName>
            </value>
            <value>
                <fullName>Finastra</fullName>
            </value>
            <value>
                <fullName>Gro</fullName>
            </value>
            <value>
                <fullName>MeridianLink</fullName>
            </value>
            <value>
                <fullName>nCino</fullName>
            </value>
            <value>
                <fullName>Temenos AVOKA</fullName>
            </value>
            <value>
                <fullName>Terafina</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>