force-app/main/default/objects/Account/fields/Contract_TCV__c.field-meta.xml
<CustomField>
    <fullName>Contract_TCV__c</fullName>
    <description>CATM</description>
    <label>Contract TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>