force-app/main/default/objects/Account/fields/Core_DPV_Interface__c.field-meta.xml
<CustomField>
    <fullName>Core_DPV_Interface__c</fullName>
    <label>Core/DPV Interface</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AlLink</fullName>
            </value>
            <value>
                <fullName>APEX/XP2</fullName>
            </value>
            <value>
                <fullName>AS400 (RPG)</fullName>
            </value>
            <value>
                <fullName>BankRite</fullName>
            </value>
            <value>
                <fullName>Bankway</fullName>
            </value>
            <value>
                <fullName>Bradford-Scott Data Corp.</fullName>
            </value>
            <value>
                <fullName>CALMS</fullName>
            </value>
            <value>
                <fullName>CBS</fullName>
            </value>
            <value>
                <fullName>CIF 20/20</fullName>
            </value>
            <value>
                <fullName>Cleartouch (formerly Fiserv Vision)</fullName>
            </value>
            <value>
                <fullName>Connect3</fullName>
            </value>
            <value>
                <fullName>Connectware (IBS)</fullName>
            </value>
            <value>
                <fullName>CU Answers</fullName>
            </value>
            <value>
                <fullName>CUSA Technologies</fullName>
            </value>
            <value>
                <fullName>DataSafe (formerly Users)</fullName>
            </value>
            <value>
                <fullName>DNA</fullName>
            </value>
            <value>
                <fullName>DNA (CoreAPI)</fullName>
            </value>
            <value>
                <fullName>NuPoint</fullName>
            </value>
            <value>
                <fullName>iCore</fullName>
            </value>
            <value>
                <fullName>Intercept - BancPac</fullName>
            </value>
            <value>
                <fullName>ITI</fullName>
            </value>
            <value>
                <fullName>jXchange</fullName>
            </value>
            <value>
                <fullName>KeyStone</fullName>
            </value>
            <value>
                <fullName>Miser</fullName>
            </value>
            <value>
                <fullName>Modern Banking Systems</fullName>
            </value>
            <value>
                <fullName>NewSolutions</fullName>
            </value>
            <value>
                <fullName>Phoenix London Bridge</fullName>
            </value>
            <value>
                <fullName>PhoenixEFE - PhoenixXM</fullName>
            </value>
            <value>
                <fullName>Portico (formerly Premier)</fullName>
            </value>
            <value>
                <fullName>Premier II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>