force-app/main/default/objects/Account/fields/Core_DPV_Software__c.field-meta.xml
<CustomField>
    <fullName>Core_DPV_Software__c</fullName>
    <inlineHelpText>This is the Core Banking platform that Teller uses to perform Teller Transactions and is the main source of Account Data within a Financial Institution.</inlineHelpText>
    <label>Core/DPV Software</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>21st Century Financial Services</fullName>
            </value>
            <value>
                <fullName>Bankway</fullName>
            </value>
            <value>
                <fullName>BMA Banking Systems</fullName>
            </value>
            <value>
                <fullName>Bradford-Scott Data Corp.</fullName>
            </value>
            <value>
                <fullName>CIF 20/20</fullName>
            </value>
            <value>
                <fullName>Cleartouch (formerly Fiserv Vision)</fullName>
            </value>
            <value>
                <fullName>Computer Services (CSI)</fullName>
            </value>
            <value>
                <fullName>Connect3</fullName>
            </value>
            <value>
                <fullName>Connectware(IBS)</fullName>
            </value>
            <value>
                <fullName>Corelation Inc.</fullName>
            </value>
            <value>
                <fullName>CU Answers</fullName>
            </value>
            <value>
                <fullName>CUBE (formerly IntegratSys)</fullName>
            </value>
            <value>
                <fullName>CUSA Technologies</fullName>
            </value>
            <value>
                <fullName>Datacenter, Inc. (DCI)</fullName>
            </value>
            <value>
                <fullName>DataSafe (formerly Users)</fullName>
            </value>
            <value>
                <fullName>Episys</fullName>
            </value>
            <value>
                <fullName>Horizon</fullName>
            </value>
            <value>
                <fullName>Intercept - BancPac</fullName>
            </value>
            <value>
                <fullName>Miser</fullName>
            </value>
            <value>
                <fullName>Modern Banking Systems (Omaha)</fullName>
            </value>
            <value>
                <fullName>Open Solutions, Inc. (OSI)</fullName>
            </value>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Share One Inc.</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Silverlake</fullName>
            </value>
            <value>
                <fullName>Sparak</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
            <value>
                <fullName>Symitar</fullName>
            </value>
            <value>
                <fullName>Systematics Mainframe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>