force-app/main/default/objects/Account/fields/Corp_Area__c.field-meta.xml
<CustomField>
    <fullName>Corp_Area__c</fullName>
    <label>Corp Area</label>
    <length>20</length>
    <type>Text</type>
</CustomField>