force-app/main/default/objects/Account/fields/Corporate_Address__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Address__c</fullName>
    <formula>IF(ISBLANK(Corporate_Street__c),Corporate_Street__c,Corporate_Street__c &amp; &quot;,&quot; &amp;  BR()) &amp; IF(ISBLANK(Corporate_City__c),Corporate_City__c,Corporate_City__c &amp; &quot;,&quot;) &amp; IF(ISBLANK(Corporate_State__c),Corporate_State__c, Corporate_State__c &amp; &quot;,&quot; &amp; BR()) &amp;  IF(ISBLANK(Corporate_Country__c),Corporate_Country__c,Corporate_Country__c &amp; BR()) &amp;  Corporate_PostalCode__c</formula>
    <label>Corporate Address</label>
    <type>Text</type>
</CustomField>