force-app/main/default/objects/Account/fields/Corporate_City__c.field-meta.xml
<CustomField>
    <fullName>Corporate_City__c</fullName>
    <label>Corporate City</label>
    <type>TextArea</type>
</CustomField>