force-app/main/default/objects/Account/fields/Corporate_Country__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Country__c</fullName>
    <label>Corporate Country</label>
    <type>TextArea</type>
</CustomField>