force-app/main/default/objects/Account/fields/Corporate_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Corporate_PostalCode__c</fullName>
    <label>Corporate PostalCode</label>
    <type>TextArea</type>
</CustomField>