force-app/main/default/objects/Account/fields/Corporate_State__c.field-meta.xml
<CustomField>
    <fullName>Corporate_State__c</fullName>
    <label>Corporate State</label>
    <type>TextArea</type>
</CustomField>