force-app/main/default/objects/Account/fields/Corporate_Street__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Street__c</fullName>
    <label>Corporate Street</label>
    <type>TextArea</type>
</CustomField>