force-app/main/default/objects/Account/fields/Count_of_Active_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Active_Contracts__c</fullName>
    <description>CATM</description>
    <label>Count of Active Contracts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>