force-app/main/default/objects/Account/fields/Count_of_Won_Opps__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Won_Opps__c</fullName>
    <description>CATM</description>
    <label>Count of Won Opps</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closing, Closed/Booked</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>