force-app/main/default/objects/Account/fields/Counterpoint__c.field-meta.xml
<CustomField>
    <fullName>Counterpoint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Counterpoint fields indicates partner deals in Retail-Counterpoint.</description>
    <label>Counterpoint</label>
    <type>Checkbox</type>
</CustomField>