force-app/main/default/objects/Account/fields/Country_with_Master_customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Country_with_Master_customer_Number__c</fullName>
    <description>In Account Country with master customer make a unique key which is used for data Migration from team Web</description>
    <externalId>true</externalId>
    <label>Country with Master customer Number</label>
    <length>35</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>