force-app/main/default/objects/Account/fields/Credit_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Application_Status__c</fullName>
    <label>Credit Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved (By Leadership)</fullName>
            </value>
            <value>
                <fullName>Approved (by D&amp;B)</fullName>
            </value>
            <value>
                <fullName>Approved (by Equifax PG)</fullName>
            </value>
            <value>
                <fullName>Approved (by subscription payment history)</fullName>
            </value>
            <value>
                <fullName>Rejected (D&amp;B not approved, no PG available)</fullName>
            </value>
            <value>
                <fullName>Rejected (D&amp;B and PG both not approved)</fullName>
            </value>
            <value>
                <fullName>Rejected (Other - sent in email)</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Pending Credit Team Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>