force-app/main/default/objects/Account/fields/Credit_Limit_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Allowed__c</fullName>
    <label>Credit Limit Allowed</label>
    <length>30</length>
    <type>Text</type>
</CustomField>