force-app/main/default/objects/Account/fields/Credit_Values_As_Of__c.field-meta.xml
<CustomField>
    <fullName>Credit_Values_As_Of__c</fullName>
    <inlineHelpText>Date of last Credit Limit update to EDW.</inlineHelpText>
    <label>Credit Values As Of:</label>
    <length>30</length>
    <type>Text</type>
</CustomField>