force-app/main/default/objects/Account/fields/Current_Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>Current_Payment_Processor__c</fullName>
    <label>Current Payment Processor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NCR Payment Processing</fullName>
            </value>
            <value>
                <fullName>BAMS</fullName>
            </value>
            <value>
                <fullName>Chase Merchant Services</fullName>
            </value>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>Evo</fullName>
            </value>
            <value>
                <fullName>FIS/WorldPay</fullName>
            </value>
            <value>
                <fullName>Fiserv/First Data</fullName>
            </value>
            <value>
                <fullName>Heartland</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>TSYS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>